force-app/main/default/objects/Monthly_Task__c/Monthly_Task__c.object-meta.xml
<CustomObject>
    <label>Monthly Task</label>
    <nameField>
        <label>Monthly Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>