force-app/main/default/objects/Monthly_Task__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Monthly Tasks</relationshipLabel>
    <relationshipName>Monthly_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>