force-app/main/default/objects/Monthly_Task__c/fields/Is_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Is_Confirm__c</fullName>
    <formula>IF(  Marketing_Confirm__c , true , IF (Marketing_AM_Confirm__c , true , IF(  Sale_AM_Confirm__c  , true ,false)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Confirm</label>
    <type>Checkbox</type>
</CustomField>