force-app/main/default/objects/Monthly_Task__c/fields/Marketing_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Confirm</label>
    <type>Checkbox</type>
</CustomField>