force-app/main/default/objects/Monthly_Task__c/fields/Month_Report__c.field-meta.xml
<CustomField>
    <fullName>Month_Report__c</fullName>
    <formula>MONTH( Report_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Report</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>