force-app/main/default/objects/Monthly_Task__c/fields/Sale_AM_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Sale_AM_Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sale AM Confirm</label>
    <type>Checkbox</type>
</CustomField>