force-app/main/default/objects/Monthly_Task__c/fields/Year_Report__c.field-meta.xml
<CustomField>
    <fullName>Year_Report__c</fullName>
    <formula>YEAR( Report_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Report</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>