force-app/main/default/objects/Monthly_Task__c/recordTypes/Content_Creation.recordType-meta.xml
<RecordType>
    <fullName>Content_Creation</fullName>
    <active>true</active>
    <label>Content Creation</label>
</RecordType>