force-app/main/default/objects/Monthly_Task__c/recordTypes/Showroom_Monitoring.recordType-meta.xml
<RecordType>
    <fullName>Showroom_Monitoring</fullName>
    <active>true</active>
    <label>Showroom Monitoring</label>
</RecordType>