force-app/main/default/objects/Monthly_Task__c/recordTypes/Training_Section.recordType-meta.xml
<RecordType>
    <fullName>Training_Section</fullName>
    <active>true</active>
    <label>Training Section</label>
</RecordType>