force-app/main/default/objects/Monthly_Task__c/listViews/Alls.listView-meta.xml
<ListView>
    <fullName>Alls</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Is_Confirm__c</columns>
    <columns>Marketing_AM_Confirm__c</columns>
    <columns>Marketing_Confirm__c</columns>
    <columns>Sale_AM_Confirm__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Alls</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>Group_User_In_DO_HCM</group>
    </sharedTo>
</ListView>