force-app/main/default/objects/Monthly_Task__c/listViews/Content_Creation_HN.listView-meta.xml
<ListView>
    <fullName>Content_Creation_HN</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Report_Url__c</columns>
    <columns>Marketing_AM_Confirm__c</columns>
    <columns>Comment__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Content Creation tháng 3</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>3/1/2024 12:00 AM</value>
    </filters>
    <label>Content Creation Check</label>
</ListView>