force-app/main/default/objects/Monthly_Task__c/listViews/Showroom_Monitoring_HN.listView-meta.xml
<ListView>
    <fullName>Showroom_Monitoring_HN</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Report_Url__c</columns>
    <columns>Marketing_AM_Confirm__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Monthly_Task__c.Showroom_Monitoring</value>
    </filters>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
        <value>Ngo The Nam</value>
    </filters>
    <label>Showroom Monitoring HN</label>
    <sharedTo>
        <group>Sale_Sup_DO_HN</group>
    </sharedTo>
</ListView>