force-app/main/default/objects/Monthly_Task__c/listViews/Training_Section.listView-meta.xml
<ListView>
    <fullName>Training_Section</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Report_Url__c</columns>
    <columns>Sale_AM_Confirm__c</columns>
    <columns>Is_Confirm__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Monthly_Task__c.Training_Section</value>
    </filters>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
        <value>Nguyen Ngoc thanh,Pham Hoang Viet,Tran Quoc Minh Nhat,New Employee</value>
    </filters>
    <label>Training Section</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>